# rust-in-action

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: rust-clippy.yml  rust.yml
ch01-hello/: Cargo.toml
ch01-hello/src/: main.rs
ch01-penguins/src/: main.rs
ch02-complex/src/: main.rs
ch02-grep-lite/: Cargo.toml
ch02-grep-lite/src/: main.rs
ch02-mandelbrot/: Cargo.toml
ch02-mandelbrot/src/: main.rs
ch03-file/: Cargo.toml
ch03-file/src/: main.rs
ch04-cubesat/: Cargo.toml
ch04-cubesat/src/: main.rs
ch05-cpu/: Cargo.toml
ch05-cpu/src/: main.rs
ch06-particles/: Cargo.toml
ch06-particles/src/: main.rs
ch07-actionkv/: Cargo.toml
ch07-actionkv/src/: akv_mem.rs  lib.rs
ch07-hexdump/: Cargo.toml
ch07-hexdump/src/: main.rs
ch07-serde/: Cargo.toml
ch07-serde/src/: main.rs
ch08-resolve/: Cargo.toml
ch08-resolve/src/: main.rs
ch08-rpg/: Cargo.toml
ch08-rpg/src/: main.rs
ch08-simple/: Cargo.toml
ch08-simple/src/: main.rs
ch08-stdlib/: Cargo.toml
ch08-stdlib/src/: main.rs
