[workspace]
members = [
    "ch01-hello",
    "ch01-penguins",
    "ch02-complex",
    "ch02-grep-lite",
    "ch02-mandelbrot",
    "ch03-file",
    "ch04-cubesat",
    "ch05-cpu",
    "ch06-particles",
    "ch07-serde",
    "ch07-hexdump",
    "ch07-actionkv",
    "ch08-simple",
    "ch08-rpg",
    "ch08-stdlib",
]
